[project]
name = "ai_agent_crewai_developer_agent"
version = "0.1.0"
description = "AI_Agent-CrewAI-Developer_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
ai_agent_crewai_developer_agent = "ai_agent_crewai_developer_agent.main:run"
run_crew = "ai_agent_crewai_developer_agent.main:run"
train = "ai_agent_crewai_developer_agent.main:train"
replay = "ai_agent_crewai_developer_agent.main:replay"
test = "ai_agent_crewai_developer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
